@@ -4,6 +4,8 @@ Version CVS HEAD (?)
     - bugfix: on some POSIX systems instrument editor plugins refused to
       load as we used a non-portable Linux specific struct field
       (fixes bug #70, patch by Ronald Baljeu)
+    - fixed endless loop which occured when loading an instrument editor
+      plugin DLL on Windows systems failed
 
   * audio driver:
     - removed the nonsense audio channel constraint (which was hard coded to
